--- a/src/package.xml
+++ b/src/package.xml
@@ -1,24 +1,39 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>55.0</version>
+	<types>
+		<members>AccountTriggerHandler</members>
+		<members>AccountTriggerHelper</members>
+		<members>MDF_AccountFactory</members>
+		<members>MDF_ContactFactory</members>
+		<members>MDF_OpportunityFactory</members>
+		<members>OpportunityTriggerHandler</members>
+		<members>OpportunityTriggerHelper</members>
+		<members>OpportunityTriggerHelper_Test</members>
+		<members>TriggerHandler</members>
+		<members>TriggerHandler_Test</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
+		<members>AccountTrigger</members>
+		<members>OpportunityTrigger</members>
+		<name>ApexTrigger</name>
+	</types>
+	<types>
+		<members>Run_Triggers__mdt.Active__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>Run_Triggers.Account_Trigger</members>
+		<members>Run_Triggers.Opportunity_Trigger</members>
+		<name>CustomMetadata</name>
+	</types>
+	<types>
+		<members>Run_Triggers__mdt</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>Run_Triggers__mdt-Run Trigger Layout</members>
+		<name>Layout</name>
+	</types>
+	<version>62.0</version>
 </Package>
